
JMX Interface
----------------------
* Added a halt operation on the CruiseControl process JMX interface. Patch from Matt Albrecht
* Renamed start operation to resume.
* Renamed stop operation to pause.

logile.xsl
----------------------
* Changed the logfile.xsl to have an output method (some Xalan versions gave an error on this). Patch from Matt Albrecht

Project
----------------------
* add descriptive toString so JMX view of CruiseControlManager shows status for each project - Patch by Matt Albrecht
* fixed to allow changing build interval from JMX interface. Project was reloading the original value from Schedule, overwriting any change a user had made in the JMX interface.

SametimeAnnouncementPublisher
----------------------
* New publisher implementation to publish build results to IBM/Lotus Sametime server. Contributed by Richard Lewis-Shell.

SVN
----------------------
* fix to use execute on Commandline object instead of just using getCommandline() - Patch by Etienne Studer

TabSheetTag
----------------------
* changed to not use images for tabs. should make it easier to add new tabs.

CruiseControl Release Notes - 2.1.4

AntBuilder
----------------------
* Added loggerClassName attribute to allow alternative ant listener/logger - Patch by Patrick Lisser

ArtifactsPublisher
----------------------
* Fixed a bug where a non-existant directory would result in a non-CruiseControl exception.

build.xml
----------------------
* Constrain checkstyle to only run against cruisecontrol code; ignore other packages.
* Build webapp by explicitly calling war target.  No longer default target.
* Can now override deploy.dir property to control where cruisecontrol.war ends up - Patch by Patrick Lisser

HTMLEmailPublisher
----------------------
* xslFileNames now encapsulated to allow for easier overriding - Patch by Patrick Lisser
* Added checkstyle.xsl - Patch by Dan Rollo

index.jsp
----------------------